# ModelAuditor

./: .gitignore  License.md  README.md  main.py  pyproject.toml
architectures/: deepderm_model.py  siim_isic_model.py
prompts/: analysis_prompt.txt  metrics_reloaded_prompt.txt  shifts_prompt.txt
utils/: agent.py
