[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-framework"
version = "0.1.0"
description = "AI-powered model auditing framework with multi-agent debate"
authors = [{name = "Lukas Kuhn"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "rich>=13.0.0",
    "anthropic>=0.25.0",
    "litellm>=1.0.0",
    "pandas>=1.5.0",
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "pillow>=9.0.0",
    "model-auditor>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
]
medical = [
    "medmnist>=2.0.0",
    "wilds>=2.0.0",
    "geffnet>=1.0.0",
    "onnxruntime>=1.0.0",
]

[project.scripts]
model-auditor = "main:main"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100